# AetherTFTP

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .tsan-suppressions.txt  .tsan_suppressions  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  HANDOVER.md  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
cmake/: DevTools.cmake  Version.cmake  version.h.in
i18n/: aethertftp_de.ts  aethertftp_es.ts  aethertftp_fr.ts  aethertftp_hi.ts  aethertftp_pl.ts  aethertftp_tr.ts
snap/: snapcraft.yaml
snap/gui/: aethertftp.desktop
src/: main.cpp
src/cli/: cli_runner.cpp  cli_runner.h
src/core/: embedded_web_server.cpp  embedded_web_server.h  metrics_exporter.cpp  metrics_exporter.h  pxe_proxy_dhcp.cpp  pxe_proxy_dhcp.h  qlog.cpp  qlog.h  tftp_client.cpp  tftp_client.h  tftp_protocol.cpp  tftp_protocol.h  tftp_server.cpp  tftp_server.h  tftp_session.cpp  tftp_session.h
src/gui/: mainwindow.cpp  mainwindow.h  map_translator.h  resources.qrc  server_config_dialog.cpp  server_config_dialog.h  speed_chart_widget.cpp  speed_chart_widget.h  theme-dark.qss  theme-light.qss  theme-nord.qss  theme.qss  theme_controller.cpp  theme_controller.h  transfer_model.cpp  transfer_model.h
tests/: .clang-tidy  run_client.sh  run_server.sh  tftp_test.cpp
